--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="#" class="btn signup">Daftar dengan Email</a>
           <p>atau</p>
           <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan No Telp</a>
+          <a href="#" class="btn telepon"><span class="fa fa-telepon"></span>Daftar dengan No Telp</a>
         </div>
       </div>
     </div>
